# poker-friends

./: .gitignore  CLAUDE.md  DEPLOY.md  README.md
backend/: Dockerfile  pyproject.toml
backend/app/: bank.py  config.py  db.py  main.py
backend/app/api/: admin.py  rest.py  ws.py
backend/app/auth/: bootstrap.py  deps.py  security.py
backend/app/game/: engine.py  manager.py  membership.py  recorder.py  room.py
backend/app/game/bots/: __init__.py  base.py  rule_based.py
backend/app/models/: __init__.py  game.py  invite.py  ledger.py  user.py
backend/app/scripts/: make_invite.py
backend/tests/: e2e_smoke.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: BettingControls.tsx  Card.tsx  HandReplay.tsx  Seat.tsx
frontend/src/lib/: api.ts  ws.ts
frontend/src/routes/: Admin.tsx  Hands.tsx  Lobby.tsx  Login.tsx  Table.tsx
frontend/src/store/: auth.ts
infra/: .env.example  docker-compose.yml
